--- a/15-hapi-listar-joi/package.json
+++ b/15-hapi-listar-joi/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "hapi": "^18.0.0",
+    "joi": "^14.3.1",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
     "pg-native": "^3.0.0",
