--- a/semana-js-expert/semana-5-drive-clone/gdrive-clone/aulas/aula01/gdrive-webapi/package.json
+++ b/semana-js-expert/semana-5-drive-clone/gdrive-clone/aulas/aula01/gdrive-webapi/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "mkdir -p downloads && node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch --runInBand",
     "test:cover": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache --runInBand --coverage"
@@ -17,8 +17,10 @@
     "jest": "^27.1.1"
   },
   "dependencies": {
+    "http-status-codes": "^2.1.4",
     "pino": "6.8",
     "pino-pretty": "5.1",
+    "pretty-bytes": "5.6",
     "socket.io": "4.1"
   }
 }
