--- a/semana-js-expert/semana-5-drive-clone/gdrive-clone/aulas/aula02/gdrive-webapi/package.json
+++ b/semana-js-expert/semana-5-drive-clone/gdrive-clone/aulas/aula02/gdrive-webapi/package.json
@@ -14,10 +14,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import-helpers": "^1.1.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "jest": "^27.1.1"
   },
   "dependencies": {
     "busboy": "^0.3.1",
+    "form-data": "^4.0.0",
     "http-status-codes": "^2.1.4",
     "pino": "6.8",
     "pino-pretty": "5.1",
